[package]
name = "nocy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
bytes = "1.11.1"
chrono = "0.4.44"
const_format = "0.2.36"
crossterm = "0.29.0"
dirs = "6.0.0"
futures-util = "0.3.32"
indexmap = "2.14.0"
inquire = "0.9.4"
parking_lot = "0.12.5"
rand = "0.10.1"
ratatui = "0.30.0"
reqwest = { version = "0.13.3", features = ["query", "gzip", "json", "stream", "form"] }
rodio = { version = "0.22.2", features = ["mp3", "wav", "flac", "default"] }
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
tokio = { version = "1.52.2", features = ["rt", "rt-multi-thread", "time", "sync", "macros", "parking_lot"] }
